assets/css/main.css
@charset "UTF-8";
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box; }

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }

blockquote:before, blockquote:after {
  content: '';
  content: none; }

q:before, q:after {
  content: '';
  content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

#stage {
  background: #5C94FC;
  width: 100%;
  height: 100%;
  position: relative; }

#ground {
  position: absolute;
  background: url("../blocks/ground.png");
  width: 100%;
  height: 128px;
  bottom: 0; }

.hero {
  z-index: 2;
  width: 68px;
  height: 64px;
  position: absolute;
  bottom: 128px;
  left: 50%;
  background: url("../sprites/hero-small.png") no-repeat; }
  .hero.luigi {
    background-position-y: -128px; }
  .hero.die {
    background-position-x: -68px; }
  .hero.start-run {
    background-position-x: -126px; }
  .hero.step-one {
    background-position-x: -204px; }
  .hero.step-two {
    background-position-x: -136px; }
  .hero.step-three {
    background-position-x: -170px; }
  .hero.jump {
    background-position-x: -408px; }
  .hero.large {
    background: url("../sprites/hero-large.png") no-repeat;
    left: 25%;
    height: 132px; }

.mushroom {
  z-index: 1;
  background: url("../sprites/mushroom.png");
  position: absolute;
  bottom: 128px;
  width: 64px;
  height: 64px; }

.ghoomba {
  z-index: 1;
  background: url("../sprites/ghoomba.png");
  position: absolute;
  bottom: 128px;
  width: 64px;
  height: 64px; }
  .ghoomba.step {
    background-position-x: -64px; }

.pipe {
  background: url("../layout/pipe.png");
  width: 128px;
  height: 128px;
  position: absolute;
  bottom: 128px; }

.castle {
  position: absolute;
  z-index: 0;
  bottom: 128px;
  width: 160px;
  height: 159px;
  background: url("../layout/castle-small.png"); }
  .castle.large {
    width: 300px;
    height: 352px;
    background: url("../layout/castle-large.png"); }

.cloud {
  z-index: 0;
  background: url("../sprites/clouds.png");
  height: 96px;
  position: absolute; }
  .cloud.one {
    width: 128px;
    background-position-x: -448px; }
  .cloud.two {
    width: 192px;
    background-position-x: 0; }
  .cloud.three {
    width: 256px;
    background-position-x: -192px; }

.shrub {
  z-index: 0;
  background: url("../sprites/shrubs.png");
  height: 64px;
  position: absolute;
  bottom: 128px; }
  .shrub.one {
    width: 128px;
    background-position-x: 0; }
  .shrub.two {
    width: 192px;
    background-position-x: -384px; }
  .shrub.three {
    width: 256px;
    background-position-x: -128px; }

.hill {
  z-index: 0;
  background: url("../sprites/hills.png");
  position: absolute;
  bottom: 128px; }
  .hill.small {
    width: 192px;
    height: 76px;
    background-position-y: -64px; }
  .hill.large {
    width: 320px;
    height: 140px;
    background-position-x: -192px; }

.block {
  position: absolute;
  width: 64px;
  height: 64px; }
  .block.brick {
    background: url("../blocks/brick.png"); }
  .block.coin {
    background: url("../blocks/coin.png"); }
  .block.empty {
    background: url("../blocks/steel.png"); }

body, html {
  width: 100%;
  height: 100%; }

body {
  font-family: Arial; }

nav {
  position: absolute;
  z-index: 1;
  background: white;
  width: 100%; }

.flip-v {
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  filter: FlipH;
  -ms-filter: "FlipH"; }

